[gd_scene load_steps=3 format=3 uid="uid://c6jvkp6x3ydxk"]

[ext_resource type="Script" path="res://cs/卡牌系统/视图/RuneCardPreview.gd" id="1_preview"]
[ext_resource type="Texture2D" path="res://assets/images/pokers/card_back.png" id="2_cardback"]

[node name="RuneCardPreview" type="Control"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_preview")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cardback")
expand_mode = 1
stretch_mode = 5

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 25.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "符文名称"
horizontal_alignment = 1 